--- a/sass/components/offer.scss
+++ b/sass/components/offer.scss
@@ -53,6 +53,7 @@
     }
   }
   &__box {
+    z-index: 9000;
     @include mobile {
       position: relative;
       // height: 100vh;
